[package]
name = "hands_tracking_workshop"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "crates/*"
]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
leap_input = { path = "crates/leap_input", version = "0.1.0" }
hand_gestures = { path = "crates/hand_gestures", version = "0.1.0" }
bevy = { version = "0.13.2", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.23.4"
iyes_perf_ui = "0.2.3"
